# RayTracer

./: .gitignore  CMakeLists.txt  Vec3.h  main.cpp
cameras/: Camera.cpp  Camera.h  FishEye.cpp  FishEye.h  Pinhole.cpp  Pinhole.h  ThinLens.cpp  ThinLens.h
io/: ImageIO.cpp  ImageIO.h
objects/: GeometricObject.h
objects/primitives/: Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
samplers/: Jittered.cpp  Jittered.h  MultiJittered.cpp  MultiJittered.h  NRooks.cpp  NRooks.h  Random.cpp  Random.h  Regular.cpp  Regular.h  Sampler.cpp  Sampler.h
scenes/: FishEyeScene.cpp  LensScene.cpp  MultiObjectsScene.cpp  RedSphereScene.cpp  SamplerScene.cpp  Scene.cpp  Scene.h  SpheresScene.cpp
scripts/: CMakeLists.txt  cmake-format.py  untitled
tracers/: MultiObjects.cpp  MultiObjects.h  SingleSphere.cpp  SingleSphere.h  Tracer.cpp  Tracer.h
utils/: Constants.h  Ray.h  ShadeRec.cpp  ShadeRec.h  Vec2.h  Vec3.h
